<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.ianvallely.canvasstool.ConfirmDelete">

    <TextView
        android:id="@+id/text_del1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del1"
        android:textSize="10pt"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_delMain"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/btn_Del1"
        android:textColor="@color/colorNo"
        android:textSize="12pt"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_del1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/text_del2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del2"
        android:textSize="10pt"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_delMain"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_delBackup"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/btn_del2"
        android:textColor="@color/colorNo"
        android:textSize="12pt"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_del2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />


</android.support.constraint.ConstraintLayout>
