<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.ianvallely.canvasstool.NewCanvassPg4">

    <TextView
        android:id="@+id/q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/q3"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_bias="0.356"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/q3_yes"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:text="@string/yes"
        android:textColor="@color/colorBlack"
        android:textSize="12pt"
        android:background="@color/colorYes"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="30dp" />

    <Button
        android:id="@+id/q3_no"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/no"
        android:textColor="@color/colorBlack"
        android:textSize="12pt"
        android:background="@color/colorNo"

        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginRight="30dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="38dp" />

</android.support.constraint.ConstraintLayout>
