<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.ianvallely.canvasstool.GroupSetup"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/groupIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/group_setupIntro"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/groupName"
        app:layout_constraintTop_toBottomOf="@+id/groupIntro"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/g_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/group_email"
        app:layout_constraintTop_toBottomOf="@+id/group_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/gSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="-2dp"
        android:text="@string/btn_submit"
        android:textColor="@color/colorWhite"
        android:textSize="10pt"
        android:background="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/g_email" />


</android.support.constraint.ConstraintLayout>
